apps/helpdesk/src/pages/common/components/SecondaryNavbar/SecondaryNavbar.less
:local {
    // The `:global(.navbar)` is to target explicitly the navbar component from reactstrap
    // This will force this style to overwrite the one from Bootstrap
    :global(.navbar).navbar {
        background-color: var(--neutral-grey-0); // legacy
        border-bottom: 1px solid var(--neutral-grey-3); // legacy
        height: 52px;
        justify-content: normal;
        padding: 0 16px 0 9px;
    }

    .link {
        color: var(--neutral-grey-5); // legacy
        font-weight: 500;
        line-height: 20px;
        margin: 0 16px;
        padding: 16px 0;
        cursor: pointer;

        &:hover {
            color: var(--neutral-grey-6); // legacy
        }
    }

    .active {
        border-bottom: 2px solid var(--main-primary); // legacy
        color: var(--neutral-grey-6); // legacy
        padding: 16px 0 14px 0;
    }
}

.axiom :local {
    --animation-duration: 250ms;
    --animation-timing-fn: cubic-bezier(0.9, 0, 0, 1);

    :global(.navbar).navbar {
        display: flex;
        background-color: var(--elevation-neutral-default);
        border-bottom: 1px solid var(--border-neutral-default);
        padding: 0 var(--spacing-lg);
        gap: var(--spacing-xl);
    }

    .link {
        color: var(--content-neutral-tertiary);
        position: relative;
        margin: 0;
        transition: color var(--animation-duration) var(--animation-timing-fn);

        &:after {
            content: '';
            position: absolute;
            bottom: 0;
            left: 0;
            right: 0;
            width: 100%;
            height: 1px;
            transition: background-color var(--animation-duration)
                var(--animation-timing-fn);
        }

        &:hover:not(.active) {
            color: var(--content-neutral-default);
            background-color: var(--surface-surface-hovered);

            &:after {
                background-color: var(--border-neutral-secondary);
            }
        }
    }

    .active {
        border-bottom: 2px solid var(--content-neutral-default);
        color: var(--content-neutral-default);
    }
}

